# python-study

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
conda.recipe/: meta.yaml
tests/: test_basic.py
